<resources>
    <string name="app_name">Lottery Simulator</string>
    <string name="welcome">Witaj w symulatorze losowania!</string>
    <string name="good_luck">Powodzenia w grze!</string>
    <string name="app_email">lottery@maslanka.pl</string>
    <string name="comp_comp">Tryb komputer vs. komputer</string>
    <string name="comp_comp_desc">Graj do momentu uzyskanie określonej liczby trafień</string>
    <string name="comp_user">Tryb komputer vs. użytkownik</string>
    <string name="comp_user_desc">manualne wprowadzanie liczb, "chybił - trafił" itp.</string>
    <string name="show_wallet">Pokaż stan portfela</string>
    <string name="how_many_numbers">Ile liczb minimalnie chcesz trafić, aby być usatysfakcjonowanym?</string>
    <string name="play">Graj!</string>
    <string name="one_shot">Pojedyńcze "chybił - trafił"</string>
    <string name="bet_amount">Określona ilość zakładów \"chybił - trafił\"</string>
    <string name="cash_amount">Inwestycja w \"chybił - trafił\" za daną sumę</string>
    <string name="get_user_numbers">Podaj swoje liczby</string>
    <string name="choose_one_option">Wybierz jedną z poniższych opcji:</string>
    <string name="wallet_state">Obecny stan portfela</string>
    <string name="wallet_state_2">\u0020zł</string>
    <string name="total_hits">Łącznie trafień</string>
    <string name="no_hits">\u0020x brak trafień</string>
    <string name="one_hit">\u0020x jedynka</string>
    <string name="two_hits">\u0020x dwójka</string>
    <string name="three_hits">\u0020x trójka</string>
    <string name="four_hits">\u0020x czwórka</string>
    <string name="five_hits">\u0020x piątka</string>
    <string name="six_hits">\u0020x szóstka</string>
    <string name="clear_wallet">Wyzeruj portfel</string>
    <string name="wallet_cleared">Wyczyszczono portfel!</string>
    <string name="get_bet_number">Podaj ilość zakładów</string>
    <string name="get_cash_amount">Podaj ilość pieniędzy, jaką chcesz przeznaczyć na grę (w PLN)</string>
    <string name="how_many_games">Aby wygrać, musiałeś zagrać:</string>
    <string name="how_many_games_number">\u0020razy</string>
    <string name="game_result_hit_numbers_text">We wszystkich losowaniach miałeś następujące ilości trafień:</string>
    <string name="cost_amount_text">Kosztowałoby Cię to:</string>
    <string name="cost_amount">\u0020zł</string>
    <string name="prize_amount_text">Z wygarnych losów otrzymałbyś:</string>
    <string name="prize_amount">\u0020zł</string>
    <string name="settlement_text1">Biorąc pod uwage obecne średnie wygrane, czyli:</string>
    <string name="three_prize">\u0020zł za trójkę</string>
    <string name="four_prize">\u0020zł za czwórkę</string>
    <string name="five_prize">\u0020zł za piątkę</string>
    <string name="six_prize">\u0020zł za szóstkę</string>
    <string name="settlement_text2">to Twój rozrachunek za tę grę wynosi:</string>
    <string name="prize_amount_text_2">z wygarnych losów otrzymałbyś</string>
    <string name="settlement">\u0020zł</string>
    <string name="show_draws">Pokaż wszystkie losowania</string>
    <string name="extra_win_message_1">W założeniach chciałeś trafić przynajmniej\u0020</string>
    <string name="extra_win_message_2">\u0020liczb(y), ale tym razem miałeś szczęście i wcześniej trafiłeś\u0020</string>
    <string name="extra_win_message_3">\u0020liczb(y)!</string>
    <string name="win_message_zero">Niestety, nic nie trafiłeś!</string>
    <string name="win_message_one">Udało Ci się trafić 1 liczbę!</string>
    <string name="win_message_two">Udało Ci się trafić 2 liczby!</string>
    <string name="win_message">Gratulacje! Wylosowałeś\u0020</string>
    <string name="win_message_three">trójkę!</string>
    <string name="win_message_four">czwórkę!</string>
    <string name="win_message_five">piątkę!</string>
    <string name="win_message_six">szóstkę!</string>
    <string name="your_numbers_text">Twoje liczby</string>
    <string name="drawn_numbers_text">Wylosowane liczby</string>
    <string name="hom_many_bets_from_amount_text">Podana suma pieniędzy z inwestycji wystarczyła na</string>
    <string name="how_many_bets_text">Zdecydowałeś się zagrać kupując</string>
    <string name="how_many_bets_from_amount">\u0020zakłady/ów</string>
    <string name="redraw">Losuj ponownie</string>
    <string name="share">Udostępnij...</string>
    <string name="redrawed">Dokonano ponownego losowania!</string>
    <string name="shared">Udostępniono</string>
    <string name="cancel">Anuluj</string>
    <string name="drawing_process">Trwa losowanie liczb...</string>
    <string name="simulating_lottery">Symulowanie losowania liczb...</string>
    <string name="drawing_hit_and_miss">Losowanie liczb na \"chybił-trafił\" i sprawdzanie trafień...</string>
    <string name="done">Wykonano\u0020</string>
    <string name="drawings">\u0020losowań...</string>
    <string name="wrong_numbers">Podane liczby są błędne!</string>
    <string name="remember_not_to_repeat">Pamiętaj, że liczby nie mogą się powtarzać!</string>
    <string name="ok">OK</string>
    <string name="drawing_nr">Losowanie nr:\u0020</string>
    <string name="your_numbers_text2">Twoje liczby:</string>
    <string name="drawn_numbers_text2">Wylosowane liczby:</string>
    <string name="hits_text">Trafienia:</string>
    <string name="change_sort">Zmień sortowanie</string>
    <string name="sorted_again">Przesortowano!</string>
    <string name="creating_list">Tworzenie listy</string>
    <string name="creating_list_message">Lista wyników jest tworzona...</string>
    <string name="too_much_draws">Przekroczono granicę %1$s losowań, aby oszczędzić zasoby urządzenia lista wszystkich losowań nie będzie dostępna</string>
    <string name="i_won">Wygrałem na loterii!</string>
    <string name="share_app">Hej! Korzystam właśnie z aplikacji symulującej losowania na loterii. \n\nJest świetna!!! Można obstawiać wyniki ze znajomymi :-)</string>
    <string name="share_message_1">Hej! Korzystam właśnie z aplikacji symulującej losowania na loterii. Miałem szczęście i trafiłem %1$s liczb/y!!!</string>
    <string name="share_message_2">Moje liczby to:\u0020</string>
    <string name="share_message_3">Liczby z losowania:\u0020</string>
    <string name="share_message_4">Jak myślisz, może warto wytypować któreś w prawdziwym losowaniu?</string>
    <string name="link_to_app">Link do symulatora losowań: https://play.google.com/store</string>
    <string name="share_message_bet">Hej! Korzystam właśnie z aplikacji symulującej losowania na loterii. Zdecydowałem się zagrać kupując %1$s zakłady/ów.
        Zainwestowałem %2$s zł, a z wygranych losów otrzymałbym %3$s zł!</string>
    <string name="share_message_bet_2">Liczby z losowania:\u0020</string>
    <string name="share_message_bet_3">We wszystkich losowaniach miałem następujące ilości trafień:</string>
    <string name="share_message_bet_4">Niezły ze mnie farciarz, prawda? Ty też spróbuj swoich sił!</string>
    <string name="all_numbers_list_unavailable">Lista wyników nie jest dostępna</string>
    <string name="navigation_drawer_open">Otwórz drawer</string>
    <string name="navigation_drawer_close">Zamknij drawer</string>
    <string name="settings">Ustawienia</string>
    <string name="more">Więcej</string>
    <string name="recommend">Poleć znajomemu</string>
    <string name="about_app">O aplikacji</string>
    <string name="performance">Wydajność</string>
    <string name="user_prefs">Ustawienia użytkownika</string>
    <string name="user_prefs_desc">Włącz tę opcję, aby mieć możliwość zmiany ustawień domyślnych aplikacji</string>
    <string name="max_drawing_number_for_list">Maksymalna liczba losowań dla listy</string>
    <string name="max_drawing_number_for_list_desc">Jeśli liczba losowań przekroczy tę wartość, lista losowań nie będzie dostęna, aby oszczędzać zasoby urządzenia. Obecnie: %1$s</string>
    <string name="max_drawing_number_for_list_get_number">Podaj liczbę z zakresu 10 - 200 000</string>
    <string name="number_picker_result_value">Number: %1$s\nDecimal: %2$s\nIs negative: %3$b\nFull number: %4$s</string>
    <string name="change_limit">Zmień limit</string>
    <string name="apperance">Wygląd</string>
    <string name="list_animation_type">Animacje listy wyników</string>
    <string name="list_animation_type_summary">Wybierz sposób w jaki ma być animowana lista wyników</string>
    <string name="list_animation_summary_error">Twoje urządzenie nie obsłguje animacji</string>
    <string name="now">Obecnie: %1$s</string>
    <string name="about_app_desc">Jest to pierwsza stworzona przeze mnie aplikacja na platformę Android.\n\nKontakt: artur9312@gmail.com\n\nŻyczę miłego użytkowania! :-)</string>
    <string name="thanks_for_recommend">Dzięki za polecenie aplikacji!</string>
    <string name="close">Zamknij</string>
</resources>
