<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.maslanka.lottery.MainActivity">

    <TextView
        android:text="@string/choose_one_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/choose_one_option"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="?android:attr/textColorPrimary"
        android:fontFamily="sans-serif" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">

                <Button
                    android:text="@string/one_shot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/one_shot" />

                <Button
                    android:text="@string/bet_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/bet_amount"
                    android:layout_below="@id/one_shot" />

                <Button
                    android:text="@string/cash_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/cash_amount"
                    android:layout_below="@id/bet_amount" />

                <Button
                    android:text="@string/get_user_numbers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/get_user_numbers"
                    android:layout_below="@id/cash_amount"/>
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
