<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.maslanka.lottery.MainActivity"
    tools:showIn="@layout/activity_main_container">


    <Button
        android:text="@string/comp_comp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comp_comp"
        android:layout_above="@+id/comp_user"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:text="@string/comp_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comp_user"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/show_wallet"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/show_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/show_wallet"
        android:layout_alignParentBottom="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/comp_comp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/welcome"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                android:textColor="?android:attr/textColorPrimary"
                android:fontFamily="sans-serif"
                />

            <TextView
                android:text="@string/good_luck"
                android:layout_width="match_parent"
                android:id="@+id/good_luck"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:layout_below="@+id/welcome"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="19dp"
                android:fontFamily="sans-serif"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/lottery_logo"
                android:id="@+id/lotto_logo"
                android:layout_below="@id/good_luck"/>



        </RelativeLayout>
    </ScrollView>


</RelativeLayout>

